--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="light_gray">#BDBDBD</color>
     <color name="light_gray_2">#9A9A9A</color>
     <color name="gray">#707070</color>
+    <color name="gray_2">#555555</color>
     <color name="green">#56ED34</color>
     <color name="green_2">#38C518</color>
     <color name="red">#DF3434</color>
