--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,9 +2,9 @@
     <!-- Base application theme. -->
     <style name="Theme.PyTournaments" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/gray</item>
-        <item name="colorPrimaryVariant">@color/black</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/light_gray_2</item>
+        <item name="colorPrimaryVariant">@color/gray_2</item>
+        <item name="colorOnPrimary">@color/black_2</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/white_2</item>
         <item name="colorSecondaryVariant">@color/gray</item>
